--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5130,6 +5130,8 @@
     <string name="multipane_ui_summary">This will Enable/Disable Dual panel view (requires reboot)</string>
     <string name="tablet_ui">Force Tablet UI</string>
     <string name="tablet_ui_summary">This will switch to Tablet UI (requires reboot)</string>
+    <string name="disable_fullscreen_keyboard_title">Disable fullscreen keyboard</string>
+    <string name="disable_fullscreen_keyboard_summary">Landscape keyboard will never take up entire screen</string>
 
     <string name="misc_short">Misc</string>
 
