--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -2466,24 +2466,24 @@
 
     <!-- PropModder -->
     <string name="propmodder_title">PropModder</string>
-    <string name="propmodder_switches">Switches</string>
+    <string name="propmodder_switches">Schalter</string>
     <string name="buildprop_title">Neustart benötigt</string>
     <string name="buildprop_settings_warning">These settings are included for experimentation and any changes made to them have the potential to cause instability, crashes, data loss or hardware failures</string>
     <string name="nonprop_cat_title">Mods involving init.d script</string>
     <string name="pref_wifi_scan_interval_title">WiFi Scan-Intervall</string>
-    <string name="pref_wifi_scan_interval_summary">Die Zeit zwischen WiFi Scans falls kein gespeicherter AP verfügbar ist</string>
+    <string name="pref_wifi_scan_interval_summary">Die Zeit zwischen WiFi Scans, falls kein gespeicherter AP verfügbar ist</string>
     <string name="pref_wifi_scan_alt_summary">Zeit zwischen WiFi Scans: %s</string>
-    <string name="pref_max_events_title">Windows Manager\'s max events per second</string>
+    <string name="pref_max_events_title">Windows Manager\'s max. Ereignisse pro Sek.</string>
     <string name="pref_max_events_summary">This is a runtime value that controls the number of events the system will allow in a second</string>
-    <string name="pref_max_events_alt_summary">Max number of system events: %s</string>
+    <string name="pref_max_events_alt_summary">Max. Anzahl an Systemereignissen: %s</string>
     <string name="pref_ring_delay_title">Telefon Klingeln Verzögerung</string>
     <string name="pref_ring_delay_summary">Die Zeit zwischen einem eingehenden Anruf und dem Start des Klingelns</string>
     <string name="pref_ring_delay_alt_summary">Eingehender Anruf Verzögerung: %s</string>
     <string name="pref_vm_heapsize_title">Dalvik Cache Heapsize</string>
-    <string name="pref_vm_heapsize_summary">Dies kontrolliert die Grösse des Dalvik Cache</string>
-    <string name="pref_vm_heapsize_alt_summary">Dalvik VM Cache Grösse: %s</string>
-    <string name="showbuild_title">Show The Build.Prop</string>
-    <string name="buildprop_summary">Find out whats in there</string>
+    <string name="pref_vm_heapsize_summary">Kontrolle der Größe des Dalvik Caches</string>
+    <string name="pref_vm_heapsize_alt_summary">Dalvik VM Cache Größe: %s</string>
+    <string name="showbuild_title">Build.Prop anzeigen</string>
+    <string name="buildprop_summary">Finde heraus was drinnen ist</string>
     <string name="showbuild_dialog">Displaying /system/Build.Prop</string>
     <string name="showbuild_loading">Lade build.prop\u2026</string>
     <string name="showbuild_error">Fehler beim Laden von build.prop\u2026</string>
@@ -2491,7 +2491,7 @@
     <string name="showbuild_version">Version</string>
     <string name="showbuild_label">We should look because knowing is half the battle</string>
     <string name="pref_fast_up_title">HSUPA Upload Speed Hack</string>
-    <string name="pref_fast_up_summary">*Warnung* Wenn du diesen Wert änderst werden die benötigten Werte in zur build.prop hinzugefügt. Falls sie nicht schon vorhanden sind</string>
+    <string name="pref_fast_up_summary">*Warnung* Wenn Du diesen Wert änderst, werden die zu benötigten Werte in build.prop hinzugefügt (Falls sie nicht schon vorhanden sind).</string>
     <string name="pref_fast_up_alt_summary">Fast up found active: %s</string>
     <string name="pref_prox_delay_title">Proximity sensor delay</string>
     <string name="pref_prox_delay_summary">When you are in-call screen is off when the device moves away from your face this delay value controls how long before screen turns on</string>
@@ -2502,11 +2502,11 @@
     <string name="pref_mod_version_default"></string>
     <string name="pref_sleep_title">PM Sleep mode</string>
     <string name="pref_sleep_summary">Modify Nighttime sleep policy</string>
-    <string name="pref_sleep_alt_summary">Current Sleep Mode: %s</string>
+    <string name="pref_sleep_alt_summary">Aktueller Schlafmodus: %s</string>
     <string name="pref_jit_title">Just In Time Complier</string>
-    <string name="pref_jit_summary">Enables/Disables JIT complier</string>
-    <string name="pref_tcp_stack_title">Optimize TCP Stack</string>
-    <string name="pref_tcp_stack_summary">Modify the buffer-size for better performance</string>
+    <string name="pref_jit_summary">JIT-Complier aktivieren/deaktivieren</string>
+    <string name="pref_tcp_stack_title">TCP-Stack optimieren</string>
+    <string name="pref_tcp_stack_summary">Die Buffer-Size anpassen für eine bessere Leistung</string>
     <string name="pref_g_speed_title">3G Speed Hack</string>
     <string name="pref_g_speed_summary">Uncap 3g Speed</string>
     <string name="pref_gpu_title">GPU-Beschleunigung</string>
@@ -2712,7 +2712,9 @@
     <string name="multipane_ui_summary">De-/aktiviert die Dual-Panel Ansicht (benötigt Neustart)</string>
     <string name="tablet_ui">Erzwinge Tabletoberfläche</string>
     <string name="tablet_ui_summary">Wechselt zur Tabletoberfläche (benötigt Neustart)</string>
-
+    <string name="disable_fullscreen_keyboard_title">Vollbild Tastatur deaktivieren</string>
+    <string name="disable_fullscreen_keyboard_summary">Landscape Tastatur wird nicht den gesamten Bildschirm verwenden.</string>
+	
     <string name="misc_short">Sonstiges</string>
 
     <string name="lockscreen_style_options_title">Aussehen</string>
@@ -2765,7 +2767,53 @@
     <string name="high_end_gfx_title">Highend Grafikeffekte</string>
     <string name="high_end_gfx_summary">Aktiviere Grafikeffekte, deaktiviert auf schwächeren Geräten</string>
 	
+	<!--- Volume key cursor control -->
+    <string name="volume_key_cursor_control_title">Zeigerkontrolle mit Lautstärketasten</string>
+    <string name="volume_key_cursor_control_off">Deaktiviert</string>
+    <string name="volume_key_cursor_control_on">Lautstärketasten bewegen Zeiger nach links/rechts</string>
+    <string name="volume_key_cursor_control_on_reverse">Lautstärketaste bewegen Zeiger nach rechts/links</string>
+
+    <!-- CM Updater -->
+    <string name="cmupdate_settings_title">CyanogenMod Aktualisierungen</string>
+    <string name="cmupdate_settings_summary">Überprüfe auf neue verfügbare Aktualisierungen</string>
+
+    <!--- Sms security limit -->
+    <string name="app_security_title">App Sicherheit</string>
+    <string name="sms_security_check_limit_title">Nachrichtenlimit</string>
+    <string name="sms_security_check_limit_summary">Zeige eine Warnung zum Vermeiden, dass Apps zu häufig Nachrichten versenden. Aktuelles Limit: %d Nachrichten in 15 Minuten</string>
+    <string name="sms_security_check_limit_default">30 (Standard)</string>
+
+    <!-- Stylus Gestures -->
+    <string name="gestures_settings_title">Stift Gesten</string>
+    <string name="category_spen_title">Stift Gesten</string>
+    <string name="enable_subcat_title">Stift</string>
+    <string name="enable_spen_title_head">Stift Gesten aktivieren</string>
+    <string name="enable_spen_summary_head">Stift Streich-Gesten zum Starten eigener Aktionen erlauben. Warnung: Apps können keine Eingaben empfangen wenn der Stift gedrückt gehalten wird.</string>
+    <string name="gestures_subcat_title">Gesten</string>
+    <string name="gestures_left_spen_title_head">Nach links streichen</string>
+    <string name="gestures_left_spen_summary_head">Eigene Aktion beim Streichen nach links festlegen</string>
+    <string name="gestures_right_spen_title_head">Nach rechts streichen</string>
+    <string name="gestures_right_spen_summary_head">Eigene Aktion beim Streichen nach rechts festlegen</string>
+    <string name="gestures_up_spen_title_head">Nach oben streichen</string>
+    <string name="gestures_up_spen_summary_head">Eigene Aktion beim nach oben Streichen festlegen</string>
+    <string name="gestures_down_spen_title_head">Nach unten streichen</string>
+    <string name="gestures_down_spen_summary_head">Eigene Aktion beim nach unten Streichen festlegen</string>
+    <string name="gestures_long_spen_title_head">Gedrückt halten</string>
+    <string name="gestures_long_spen_summary_head">Eigene Aktion beim gedrückt Halten festlegen</string>
+    <string name="gestures_double_spen_title_head">Doppelt drücken</string>
+    <string name="gestures_double_spen_summary_head">Eigene Aktion beim doppelt Drücken festlegen</string>
+	
     <!-- Stylus Icon -->
-    <string name="stylus_icon_enabled_title">Stift-Symbol</string>
+    <string name="stylus_icon_enabled_title">Stift-Symbol anzeigen</string>
     <string name="stylus_icon_enabled_summary">Zeiger einblenden, wenn ein Stift verwendet wird</string>
+	
+    <!-- Gestures Options -->
+    <string name="gestures_action_empty">Keine Aktion</string>
+    <string name="gestures_action_home">Zurück zu Home</string>
+    <string name="gestures_action_back">Zurück-Taste emulieren</string>
+    <string name="gestures_action_menu">Menü-Taste emulieren</string>
+    <string name="gestures_action_search">Suche aufrufen</string>
+    <string name="gestures_action_recent">Letzte-Apps</string>
+
+    <!-- **** CYANOGENMOD ADDITIONS END **** -->
 </resources>
