--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5123,7 +5123,9 @@
     <string name="custom_carrier_label_title">Custom carrier label</string>
     <string name="custom_carrier_label_explain">Please enter a new label. Enter an empty label to revert to stock label.</string>
     <string name="custom_carrier_label_notset">Custom label currently not set</string>
-	<string name="recent_kill_all">Enable kill-all-button</string>
+    <string name="notification_show_wifi_ssid_title">Show Wifi network name</string>
+    <string name="notification_show_wifi_ssid_summary">Display the name of the currently connected Wifi network</string>
+    <string name="recent_kill_all">Enable kill-all-button</string>
     <string name="recent_kill_all_summary">Displays a button to kill all apps on recents window</string>
     <string name="multipane_ui">Enable Dual panel</string>
     <string name="multipane_ui_summary">This will Enable/Disable Dual panel view (requires reboot)</string>
