--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5129,6 +5129,8 @@
     <string name="recent_kill_all_summary">Displays a button to kill all apps on recents window</string>
     <string name="multipane_ui">Enable Dual panel</string>
     <string name="multipane_ui_summary">This will Enable/Disable Dual panel view (requires reboot)</string>
+    <string name="alt_resolver">Use Alt Default App Grid</string>
+    <string name="alt_resolver_summary">Use Alternate Default App Picker</string>
     <string name="tablet_ui">Force Tablet UI</string>
     <string name="tablet_ui_summary">This will switch to Tablet UI (requires reboot)</string>
     <string name="disable_fullscreen_keyboard_title">Disable fullscreen keyboard</string>
