--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4179,7 +4179,7 @@
     <string name="safe_headset_restore_summary">Prevent loud volume levels when headset is first plugged in</string>
 
     <!-- Battery light settings  -->
-    <string name="battery_light_title">Battery light</string>
+    <string name="battery_light_title">Battery LED</string>
     <string name="battery_low_pulse_title">Pulse if battery low</string>
     <string name="battery_light_list_title">Colors</string>
     <string name="battery_light_low_color_title">Battery low</string>
@@ -4227,7 +4227,7 @@
     <string name="ll_num_levels">Set number of levels</string>
 
     <!-- Display settings screen, notification light settings -->
-    <string name="notification_pulse_title">Notification light</string>
+    <string name="notification_pulse_title">Notification LED</string>
     <string name="notification_light_general_title">General</string>
     <string name="notification_light_applist_title">Applications</string>
     <string name="notification_light_phonelist_title">Phone</string>
