Settings: add Advanced menu for device-specific settings app
Change-Id: Iaa8679ccca0b407da410be49cf88d4dc1794f747

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4990,7 +4990,9 @@
     <string name="battery_bar_style_title">Battery bar alignment</string>
     <string name="battery_bar_thickness_title">Battery bar thickness</string>
     <string name="battery_bar_animate_title">Charging animation</string>
-    <string name="battery_bar_animate_summary">The charging animation may result in a poor user expe
-rience. Enable at your own discretion.</string>
+    <string name="battery_bar_animate_summary">The charging animation may result in a poor user experience. Enable at your own discretion.</string>
+
+    <!-- Advanced, Device specific (DeviceParts) settings  -->
+    <string name="advanced_settings_title">Advanced</string>
 
 </resources>
