--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4267,8 +4267,8 @@
     <!-- Settings main menu category heading. Rom (Launcher, Themes, System). [CHAR LIMIT=40] -->
     <string name="header_category_rom_settings">ASS</string>
 
-	<!--OTA SHORTCUT -->
-	<string name="ota_app_title">OTA</string>
+    <!--OTA SHORTCUT -->
+    <string name="ota_app_title">OTA</string>
 
     <!-- Launcher settings  -->
     <string name="launcher_settings_title">Launcher</string>
@@ -4328,8 +4328,8 @@
     <string name="title_toggle_media_previous">Media: Skip to Previous</string>
     <string name="title_toggle_media_next">Media: Skip to Next</string>
     <string name="title_toggle_lte">Toggle LTE</string>
-	<string name="title_toggle_reboot">Toggle Reboot (LongPress to Recovery)</string>
-	<string name="title_toggle_fcharge">Toggle Fast Charge</string>
+    <string name="title_toggle_reboot">Toggle Reboot (LongPress to Recovery)</string>
+    <string name="title_toggle_fcharge">Toggle Fast Charge</string>
     <string name="title_toggle_wimax">Toggle WiMax</string>
     <string name="title_button_modes">Button modes</string>
     <string name="pref_brightness_mode_title">Brightness modes</string>
@@ -4375,6 +4375,15 @@
     <string name="status_bar_style_hidden">Hidden</string> <!-- TODO: dedup -->
 
     <string name="lock_screen_title">Lock screen</string>
+
+    <!-- Notification drawer background -->
+
+    <string name="notification_wallpaper_title">Notification drawer background</string>
+    <string name="notification_wallpaper_landscape_title">Different landscape background</string>
+    <string name="notification_background_color_fill">Color fill</string>
+    <string name="notification_background_custom_image">Custom image</string>
+    <string name="notification_background_default_wallpaper">Default background</string>
+
 
     <!-- Lock Screen Shortcuts -->
     <string name="lockscreen_target_info">Drag the slider to targets to assign shortcuts</string>
@@ -4475,7 +4484,7 @@
     <string name="lockscreen_battery_status_charging">Only when charging</string>
     <string name="lockscreen_battery_status_alwayson">Always on</string>
 
-	<!-- Lockscreen Buttons -->
+    <!-- Lockscreen Buttons -->
     <string name="lockscreen_buttons_title">Button actions</string>
     <string name="lockscreen_buttons_summary">View or change lock screen button actions</string>
     <string name="lockscreen_long_press_back_title">Long press Back button</string>
@@ -5080,7 +5089,7 @@
     
     <string name="display_title">Display</string>
 
-	<string name="status_bar_transparency_title">Status bar transparency</string>
+    <string name="status_bar_transparency_title">Status bar transparency</string>
     <string name="battery_icon_cat">Battery icon options</string>
 
     <string name="clock_cat">Clock options</string>
@@ -5091,7 +5100,7 @@
     <string name="power_menu_settings_title">Power menu</string>
     <string name="power_menu_reboot_title">Reboot</string>
     <string name="power_menu_profiles_title">Profiles</string>
-	<string name="power_menu_fullscreen_title">Full Screen</string>
+    <string name="power_menu_fullscreen_title">Full Screen</string>
     <string name="power_menu_screenshot_title">Screenshot</string>
     <string name="power_menu_airplanemode_title">Airplane mode</string>
     <string name="power_menu_silenttoggle_title">Silent toggle</string>
@@ -5143,8 +5152,9 @@
 
     <!-- General UI -->
     <string name="title_ui">General UI</string>
-    <string name="notification_wallpaper_title">Choose notification background</string>
-    <string name="notification_wallpaper_summary">You can remove the wallpaper from the menu in this window</string>
+    <string name="notification_style_grouptitle">Style</string>
+    <string name="notification_style_title">Notification drawer style</string>
+    <string name="notification_style_summary">Change your notification drawer style</string>
     <string name="notif_wallpaper_alpha_title">Notification background transparency</string>
     <string name="notif_alpha_title">Notification Rows transparency</string>
     <string name="custom_carrier_label_title">Custom carrier label</string>
@@ -5190,7 +5200,7 @@
     <string name="slim_source_summary">SlimRoms are fully open source. Source at github.com/SlimRoms</string>
     <string name="about_cna">About Slim ROms</string>
     <string name="about_slim_summary">@null</string>
-	<string name="donate_slim">http://forum.xda-developers.com/donatetome.php?u=4135991</string>
+    <string name="donate_slim">http://forum.xda-developers.com/donatetome.php?u=4135991</string>
     <string name="donate_cna">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=JN6B9PY4V2388</string>
     <string name="donate_cyanogenmod">http://forum.cyanogenmod.com/donate</string>
     <string name="donate_aokp">http://aokp.co/</string>
