(10) settings: port ime selector notification toggle
framework changes already present

Change-Id: Ifafe08296ace372499f10e6fd8eb8bfc48546fde

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4721,4 +4721,8 @@
     <string name="adb_notify">USB debugging notify</string>
     <string name="adb_notify_summary">Display a notification when USB debugging is connected</string>
 
+    <!-- Whether to display IME switcher notifcation -->
+    <string name="ime_switcher_notify">Selector notification</string>
+    <string name="ime_switcher_notify_summary">Display input method selector notification</string>
+
 </resources>
